# leavey

./: .env  .gitignore  README.md  docker-compose.yml  gcp_vm_setup.sh  local_db.sqlite
backend/: .env  Dockerfile  alembic.ini  local_db.sqlite  prestart.sh  pyproject.toml  requirements.txt  verify_backend.py
backend/alembic/: env.py
backend/alembic/versions/: 536dbe85e1ed_add_cancelled_status.py  7e9a8f4c2d1b_add_is_active_to_user.py  fdc508f3d34b_sync_models_add_document_table_and_.py
backend/app/: main.py  models.py
backend/app/core/: config.py  database.py  security.py
backend/app/routers/: audit.py  finance.py  leaves.py  users.py  webhooks.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md  reconciliation.md  setup.md  test_cases.md  user_guides.md
frontend/: Dockerfile  eslint.config.mjs  orval.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.js  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/users/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/finance/: page.tsx
frontend/app/leaves/: page.tsx
frontend/app/leaves/[id]/: page.tsx
frontend/components/auth/: RoleGuard.tsx
frontend/components/dashboard/: ActivityItem.tsx  StatsCard.tsx
frontend/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/components/providers/: AxiosInterceptor.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: constants.ts  utils.ts
frontend/lib/api/: axios-instance.ts  client.ts  index.schemas.ts
nginx/: nginx.conf
nginx/certs/: cert.crt  cert.key
(+10 files in other folders)
